<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TrainingApp</string>
    <string name="login_correo">Correo</string>
    <string name="login_contrasena">Contraseña</string>
    <string name="login_button">Iniciar Sesion</string>
    <string name="login_registro">Registrarse</string>
    <string name="espanol">ESPAÑOL</string>
    <string name="ingles">INGLES</string>
    <string name="settings">Configuración</string>
    <string name="dashboard_nav_menu">Dashboard</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">drawer open</string>
    <string name="navigation_drawer_close">drawer_close</string>
    <string name="number_adapter_entrenamiento">1</string>
    <string name="prompt_signin_form">prompt_signin_form</string>
    <string name="today_training">Entrenamiento de Hoy:</string>
    <string name="entreno_opcional">Entreno Opcional</string>
    <string name="entrenamientos">Entrenamientos</string>
    <string name="historial">Historial</string>
    <string name="idiomas">Idiomas</string>
    <string name="salir">Salir</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="formulario_de_registro">Formulario de registro</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="mujer">Mujer</string>
    <string name="hombre">Hombre</string>
    <string name="telefono">Teléfono</string>
    <string name="registrarse">Registrarse</string>
    <string name="ejercicios">Ejercicios</string>


</resources>