<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".RegistroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/formulario_de_registro"
                android:textAlignment="center"
                android:textSize="18dp"
                tools:text="Formulario de registro">

            </TextView>


                <EditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                android:hint="@string/nombre"
                android:inputType="text"
                    android:minHeight="48dp"/>

                <EditText
                    android:id="@+id/txtApellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/apellido"
                    android:inputType="text"
                    android:minHeight="48dp"/>
            <RadioGroup
                android:id="@+id/radioSexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="189dp"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/mujer" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/hombre" />
            </RadioGroup>

            <EditText
                android:id="@+id/txtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:minHeight="48dp"
                android:hint="@string/telefono"
                android:inputType="phone" />


                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:minHeight="48dp"
                    android:hint="@string/login_correo"
                    android:inputType="textEmailAddress" />


                <EditText
                    android:id="@+id/txtContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:minHeight="48dp"
                    android:hint="@string/login_contrasena"
                    android:inputType="textPassword"
                     />

            <Button
                android:id="@+id/btnRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:enabled="true"
                android:backgroundTint="@color/azul_3"
                android:text="@string/registrarse"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

