<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/login" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEmail"
                    android:layout_width="369dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:hint="@string/login_correo"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/azul_3" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtContrasena"
                    android:layout_width="369dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:hint="@string/login_contrasena"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/azul_3" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnLogin"
                android:layout_width="369dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:backgroundTint="@color/azul_3"
                android:hint="@string/login_button"
                android:text="Iniciar Sesión"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/singUptxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/login_registro"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>